--- a/index.html
+++ b/index.html
@@ -3,11 +3,40 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <div class="container-fluid text-center">
+<div class="row mt-5">
+    <div class="col">
+        <h1>Bootstrap Button Practice</h1>  
+</div>
+<div class="row">
+    <div class="col">
+        <a href="https://www.frhsd.com/" class=
+        "btn btn-primary">FRHSD Website</a>
+    </div>
+        <div class="col">
+        <a type="https://www.frhsd.com/" class=
+        "btn btn-danger">Danger</a>
+        </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col">
+            <button type="button" class=
+            "btn btn-outline-secondary">Secondary</button>
+</div>
+<div class="col">
+    <button type="button" class="btn btn-outline-info">Info</button>
+<div>
+ </div class="row mt-5">
+     <div class="col">
+        <div class="d-grip gap 2"
+        type="button"stle="background-color: 
+
+        </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
